--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 compiler/config.mk
 compiler/ubuntu.mk
+compiler/ifcc
+compiler/DI.mk
+compiler/fedora.mk
+compiler/a.out
+compiler/generated/
+compiler/build/
