add div and remainder

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,11 @@ compiler/a.out
 compiler/*.o
 compiler/*.c
 compiler/*.s
-compiler/ret42_gcc.s
-compiler/ret42_ifcc.s
 
 tests/ifcc-test-output/*
 
 .vscode/
+.antlr/
 tests/ifcc-wrapper.sh
+
+son_note.md
